// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTimestamp should render 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Timestamp
      </div>
      <div
        class="font-semibold"
      >
        31.07.2020 16:34:41
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionTimestamp should render with custom format 1`] = `
<div>
  <div
    class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="flex-1 space-y-2"
    >
      <div
        class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
      >
        Timestamp
      </div>
      <div
        class="font-semibold"
      >
        2020-07-31
      </div>
    </div>
  </div>
</div>
`;
